--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,7 @@
         = csrf_meta_tags
 
     %body
-        = yield
+        = render 'layouts/header'
+        .container
+            = yield
+        = render 'layouts/footer'
