--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,14 +1,15 @@
 %footer.footer
-    %small
-        The
-        %a{href: 'http://'} Ruby on Rails Tutorial
-        by
-        %a{href: 'http://'} Michael Hartl
-    %nav
-        %ul
-            %li<
-                = link_to "About", about_path
-            %li<
-                = link_to "Contact", contact_path
-            %li<
-                %a{href: 'http://'} News
+    .container
+        %small
+            The
+            %a{href: 'http://'} Ruby on Rails Tutorial
+            by
+            %a{href: 'http://'} Michael Hartl
+        %nav
+            %ul
+                %li<
+                    = link_to "About", about_path
+                %li<
+                    = link_to "Contact", contact_path
+                %li<
+                    %a{href: 'http://'} News
